--- a/locate.html
+++ b/locate.html
@@ -1,1 +1,35 @@
-<div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/u6iGNlB8JCb1DymF53" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/i-love-you-loveily-u6iGNlB8JCb1DymF53">via GIPHY</a></p>
+<!DOCTYPE html>
+<html>
+<body oncload="getLocation()">
+
+
+<iframe src="https://giphy.com/embed/u6iGNlB8JCb1DymF53" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/i-love-you-loveily-u6iGNlB8JCb1DymF53">via GIPHY</a></p>
+
+
+
+
+
+
+
+
+<p id="demo"></p>
+
+<script>
+const x = document.getElementById("demo");
+
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else { 
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude + 
+  "<br>Longitude: " + position.coords.longitude;
+}
+</script>
+
+</body>
+</html>
