--- a/locate.html
+++ b/locate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body oncload="getLocation()">
+<body onload="getLocation()">
 
 
 <iframe src="https://giphy.com/embed/u6iGNlB8JCb1DymF53" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/i-love-you-loveily-u6iGNlB8JCb1DymF53">via GIPHY</a></p>
